# siphon

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  alembic.ini  claude.md  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  siphon.sh
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_dest_connection_triggered_by.py  003_add_pii_columns.py  004_add_webhook_sla.py  005_add_partition_by.py  006_add_schema_registry.py  007_add_lineage_to_job_runs.py  008_add_connection_concurrency.py  009_add_pipeline_priority.py  010_add_soft_delete.py  011_add_gdpr_events.py
docs/: README.md  api-reference.md  architecture.md  audit-2026-04-15.md  auth.md  connections.md  contributing.md  deployment.md  frontend.md  pipelines.md  roadmap.md
docs/plans/: 2026-04-11-phase-15-cleanup-performance.md  2026-04-11-phase-16-celery-redis.md  2026-04-11-phase-17-gdpr.md
docs/specs/: 2026-04-11-phases-15-17-design.md
docs/superpowers/plans/: 2026-03-25-phase-7-hotfixes.md  2026-03-25-phase1-skeleton.md  2026-03-25-phase2-api-queue.md  2026-03-25-phase3-sql-source.md  2026-03-28-oracle-streaming.md  2026-04-05-phase-14-completion.md  2026-04-05-phase-14-observability-schema.md
docs/superpowers/specs/: 2026-03-25-siphon-ui-design.md  2026-03-26-oracle-streaming-design.md  2026-04-04-phase-11-reliability-parsers-pii.md  2026-04-05-phase-14-completion.md  2026-04-05-phase-14-observability-schema.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: api.ts  queryKeys.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
memory/: project_siphon.md
src/siphon/: celery_app.py  crypto.py  db.py  main.py  metrics.py  models.py  orm.py  queue.py  scheduler.py  tasks.py  variables.py  worker.py
src/siphon/auth/: deps.py  jwt_utils.py  router.py
src/siphon/connections/: router.py
src/siphon/gdpr/: router.py
src/siphon/pipelines/: router.py  watermark.py
src/siphon/preview/: router.py
src/siphon/runs/: router.py
src/siphon/users/: router.py
src/siphon/utils/: retry.py
testenv/: README.md  docker-compose.yml  mysql.sh
testenv/init/: 01_schema.sql  02_seed.sql
tests/: conftest.py  test_abcs.py  test_auth.py  test_avro_parser.py  test_bigquery_destination.py  test_celery_tasks.py  test_connections.py  test_crypto.py  test_csv_parser.py  test_db.py  test_gdpr.py  test_http_rest_source.py  test_integration_s3.py  test_integration_sftp.py  test_integration_sql.py  test_json_parser.py  test_jwt_utils.py  test_lineage.py  test_logging.py  test_main.py  test_models.py  test_orm.py  test_pipelines.py  test_preview.py  test_queue.py  test_registry.py  test_retry.py  test_runs.py  test_s3_parquet.py  test_scheduler.py  test_schema_registry.py  test_sftp_source.py  test_snowflake_destination.py  test_sql_source.py  test_users.py  test_variables.py  test_watermark.py  test_worker.py  test_worker_atomicity.py  test_worker_phase14.py  (+1 more)
(+47 files in other folders)
