[project]
name = "siphon"
version = "0.1.0"
description = "Lightweight data extraction service — replaces Spark for Bronze layer ETL"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyarrow>=18.0",
    "connectorx>=0.3",
    "pandas>=2.2",
    "oracledb>=2.4",
    "paramiko>=3.5",
    "python-dateutil>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=3.2,<4.0",
    "slowapi>=0.1",
    "cryptography>=42.0",
    "apscheduler[sqlalchemy]>=3.10",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siphon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires external services (docker-compose)"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["siphon"]
