[project]
name = "siphon"
version = "0.1.0"
description = "Lightweight data extraction service — replaces Spark for Bronze layer ETL"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "apscheduler[sqlalchemy]>=3.10",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "bcrypt>=3.2,<4.0",
    "connectorx>=0.3",
    "cryptography>=42.0",
    "fastapi>=0.115",
    "fastavro>=1.9",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-sdk>=1.24",
    "oracledb>=2.4",
    "pandas>=2.2",
    "paramiko>=3.5",
    "passlib[bcrypt]>=1.7",
    "prometheus-client>=0.20",
    "psycopg2-binary>=2.9",
    "pyarrow>=18.0",
    "pydantic>=2.9",
    "pyjwt>=2.8",
    "python-dateutil>=2.9",
    "requests>=2.32",
    "slowapi>=0.1",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.4",
    "uvicorn[standard]>=0.32",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]
gcp = [
    "google-cloud-bigquery[pandas]>=3.27",
]
snowflake = [
    "snowflake-connector-python[pandas]>=3.12",
]
otel-otlp = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siphon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires external services (docker-compose)"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["siphon"]

[dependency-groups]
dev = [
    "requests>=2.33.1",
]
